manifests/robusta/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"robusta:holmes","ingressName":"robusta:holmes","hostname":"holmes.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/auth-realm":"HolmesGPT - auth required","nginx.ingress.kubernetes.io/auth-secret":"holmes-basic-auth","nginx.ingress.kubernetes.io/auth-type":"basic","nginx.ingress.kubernetes.io/proxy-read-timeout":"300","nginx.ingress.kubernetes.io/proxy-send-timeout":"300"},"name":"holmes","namespace":"robusta"},"spec":{"ingressClassName":"ng [...]
      nginx.ingress.kubernetes.io/auth-realm: HolmesGPT - auth required
      nginx.ingress.kubernetes.io/auth-secret: holmes-basic-auth
      nginx.ingress.kubernetes.io/auth-type: basic
      nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    name: holmes
    namespace: robusta
  spec:
    ingressClassName: nginx
    rules:
    - host: holmes.35.241.255.137.nip.io
      http:
        paths:
        - backend:
            service:
              name: holmes
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - holmes.35.241.255.137.nip.io
      secretName: holmes-tls
  status:
    loadBalancer:
      ingress:
      - ip: 35.241.255.137
kind: List
metadata:
